# d3200-ble-note-downloader

./: .gitignore  Makefile  README.md  pyproject.toml  soundcore_d3200_downloader.py
docs/: BLE_DECRYPTION_GUIDE.md
downloads/: README.md
tests/: test_crypto.py  test_framing.py  test_packaging.py
tools/: d3200_decrypt_ble.py  d3200_sdk_crypto.py  known_plaintext.py
